@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) [2018-2022] Payara Foundation and/or its affiliates. All rights reserved.
+ * Copyright (c) [2018-2023] Payara Foundation and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -63,6 +63,7 @@ import jakarta.ws.rs.POST;
 import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.Application;
+import java.lang.reflect.InvocationTargetException;
 import org.eclipse.microprofile.openapi.models.OpenAPI;
 import org.eclipse.microprofile.openapi.models.Operation;
 import org.eclipse.microprofile.openapi.models.PathItem;
@@ -73,11 +74,10 @@ import org.glassfish.hk2.classmodel.reflect.ClassModel;
 import org.glassfish.hk2.classmodel.reflect.ExtensibleType;
 import org.glassfish.hk2.classmodel.reflect.MethodModel;
 import org.glassfish.hk2.classmodel.reflect.Type;
-import org.glassfish.hk2.classmodel.reflect.Types;
 
 public class OpenApiContext implements ApiContext {
 
-    private final Types allTypes;
+    private final Map<String, Type> allTypes;
     private final ClassLoader appClassLoader;
     private final OpenAPI api;
     private final Set<Type> allowedTypes;
@@ -90,9 +90,9 @@ public class OpenApiContext implements ApiContext {
 
     private Map<ExtensibleType<? extends ExtensibleType>, AnnotationInfo> parsedTypes = new ConcurrentHashMap<>();
 
-    private Map<String, APIResponse> mappedExceptionResponses = new ConcurrentHashMap<>();
+    private Map<String, Set<APIResponse>> mappedExceptionResponses = new ConcurrentHashMap<>();
 
-    public OpenApiContext(Types allTypes, Set<Type> allowedTypes, ClassLoader appClassLoader, OpenAPI api) {
+    public OpenApiContext(Map<String, Type> allTypes, Set<Type> allowedTypes, ClassLoader appClassLoader, OpenAPI api) {
         this.allTypes = allTypes;
         this.allowedTypes = allowedTypes;
         this.api = api;
@@ -135,12 +135,18 @@ public class OpenApiContext implements ApiContext {
     @Override
     public void addMappedExceptionResponse(String exceptionType, APIResponse exceptionResponse) {
         if (exceptionType != null) {
-            mappedExceptionResponses.put(exceptionType, exceptionResponse);
+            if(mappedExceptionResponses.containsKey(exceptionType)) {
+                mappedExceptionResponses.get(exceptionType).add(exceptionResponse);
+            } else {
+                Set set = new HashSet<>();
+                set.add(exceptionResponse);
+                mappedExceptionResponses.put(exceptionType, set);
+            }
         }
     }
 
     @Override
-    public Map<String, APIResponse> getMappedExceptionResponses() {
+    public Map<String, Set<APIResponse>> getMappedExceptionResponses() {
         return Collections.unmodifiableMap(mappedExceptionResponses);
     }
 
@@ -151,12 +157,12 @@ public class OpenApiContext implements ApiContext {
 
     @Override
     public boolean isApplicationType(String type) {
-        return allTypes.getBy(type) != null;
+        return allTypes.containsKey(type);
     }
 
     @Override
     public Type getType(String type) {
-        return allTypes.getBy(type);
+        return allTypes.get(type);
     }
 
     @Override
@@ -186,16 +192,18 @@ public class OpenApiContext implements ApiContext {
                     mapping.put(key, resourceClasses);
                     try {
                         Class<?> clazz = appClassLoader.loadClass(classModel.getName());
-                        Application app = (Application) clazz.newInstance();
+                        Application app = (Application) clazz.getDeclaredConstructor().newInstance();
                         // Add all classes contained in the application
                         resourceClasses.addAll(app.getClasses()
                                 .stream()
                                 .map(Class::getName)
                                 .filter(name -> !name.startsWith("org.glassfish.jersey")) // Remove all Jersey providers
-                                .map(allTypes::getBy)
+                                .map(allTypes::get)
                                 .filter(Objects::nonNull)
                                 .collect(toSet()));
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+                            | NoSuchMethodException | IllegalArgumentException
+                            | SecurityException | InvocationTargetException ex) {
                         LOGGER.log(WARNING, "Unable to initialise application class.", ex);
                     }
                 } else {
